--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-PORT= 5001
-NODE_ENV = development
-HOST= localhost
-SERVER= DESKTOP-U0UM9UJ\SQLEXPRESS
-DRIVER=msnodesqlv8
-USER= root
-DATABASE=TestDB
-PASSWORD= 
+# PORT= 5001
+# NODE_ENV = development
+# HOST= localhost
+# SERVER= DESKTOP-U0UM9UJ\SQLEXPRESS
+# DRIVER=msnodesqlv8
+# USER= root
+# DATABASE=TestDB
+# PASSWORD= 
  
